--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Android basic app</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="dashboard_screen">Dashboard Screen</string>
+    <string name="home_screen">Home Screen</string>
+    <string name="profile_screen">Profile Screen</string>
 </resources>
